<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ddf2da">

    <EditText
        android:id="@+id/new_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/login_textbox_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#6a6b6a"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/new_password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="#6a6b6a"
        android:background="@drawable/login_textbox_background"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_pass"
        android:textAlignment="center"
        android:textColorHint="#6a6b6a"
        android:background="@drawable/login_textbox_background"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColorHint="#6a6b6a"
        android:background="@drawable/login_textbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="127dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="116dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="393dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_logo_description"
        android:src="@drawable/logofinal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.49" />


    <Button
        android:id="@+id/signupnow_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/palavo_login_logo"
        android:layout_alignRight="@id/palavo_login_logo"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button_style"
        android:onClick="signup"
        android:text="@string/signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.916"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/new_username" />

</android.support.constraint.ConstraintLayout>